--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react-animated-cursor": "^2.7.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7"
   }
 }
